header, hero, courses section

--- a/index.html
+++ b/index.html
@@ -98,5 +98,201 @@
         <link rel="stylesheet" href="./assets/css/base.css" />
         <link rel="stylesheet" href="./assets/css/main.css" />
     </head>
-    <body></body>
+    <body>
+        <header class="header content-size">
+            <!-- Header-Navbar -->
+            <div class="header_navbar">
+                <div class="header_lesson">
+                    <p class="header_lesson-text">Lesson.</p>
+                </div>
+                <div class="header_nav-item-block">
+                    <ul class="header_nav-item-list">
+                        <li class="header_nav-item-list-li">Home</li>
+                        <li class="header_nav-item-list-li">Courses</li>
+                        <li class="header_nav-item-list-li">Pricing</li>
+                        <li class="header_nav-item-list-li">Reviews</li>
+                    </ul>
+                    <a href="">
+                        <div class="header_signup-btn btn">Sign Up</div>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Header-Hero -->
+            <div class="header_hero">
+                <div class="header_hero_img-block">
+                    <img
+                        class="header_hero_img"
+                        src="./assets/img/hero-guy-lesson 1.png"
+                        alt=""
+                    />
+                    <div class="hero_ad">
+                        <div class="hero_add-block">
+                            <div class="hero_ad-icon">
+                                <img
+                                    class="hero_add-icon-design"
+                                    src="./assets/img/design.svg"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="hero_ad-design">
+                                <p class="hero_add-20course">20 Courses</p>
+                                <p class="hero_add-title">UI/UX Design</p>
+                            </div>
+                        </div>
+                        <div class="hero_add-block">
+                            <div class="hero_ad-icon">
+                                <img
+                                    class="hero_add-icon-development"
+                                    src="./assets/img/Development.svg"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="hero_ad-development">
+                                <p class="hero_add-20course">20 Courses</p>
+                                <p class="hero_add-title">Development</p>
+                            </div>
+                        </div>
+                        <div class="hero_add-block">
+                            <div class="hero_ad-icon">
+                                <img
+                                    class="hero_add-icon-marketing"
+                                    src="./assets/img/marketing.svg"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="hero_ad-marketing">
+                                <p class="hero_add-20course">20 Courses</p>
+                                <p class="hero_add-title">Marketing</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="header_hero_desc">
+                    <h1>Learn without limits and spread knowledge.</h1>
+                    <p class="header_hero_desc-text">
+                        Build new skills for that “this is my year” feeling with
+                        courses, certificates, and degrees from world-class
+                        universities and companies.
+                    </p>
+                    <div class="hero-cta">
+                        <button class="hero_view-course-btn">
+                            See Courses
+                        </button>
+
+                        <p class="hero__watch-video">
+                            <img
+                                src="./assets/img/watch-icon.png"
+                                alt=""
+                            />Watch Videos
+                        </p>
+                    </div>
+                    <div class="hero-course-info">
+                        <p>Recent engagement</p>
+                        <div class="hero_course_block">
+                            <div class="hero-student">
+                                <span>50K </span>
+                                <span>Students</span>
+                            </div>
+                            <div class="hero-course">
+                                <span>70+ </span>
+                                <span>Courses</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <!-- Courses Section -->
+        <div class="courses content-size">
+            <div class="courses_header">
+                <div class="courses_header-text">
+                    <h1 class="courses_header-text">Our popular courses</h1>
+                    <p class="courses_header-desc">
+                        Build new skills with new trendy courses and shine for
+                        the next future career.
+                    </p>
+                </div>
+                <div class="courses_header--next-pages">
+                    <img src="./assets/img/next-page-icons.png" alt="" />
+                </div>
+            </div>
+
+            <div class="courses_card">
+                <div class="courses_card-1">
+                    <img
+                        class="courses_card-img"
+                        src="./assets/img/courses1.png"
+                        alt=""
+                    />
+                    <div class="courses_card--title">
+                        <p>Basic web design</p>
+                        <div class="course_card__review">
+                            <img src="./assets/img/couse-Star 6.png" alt="" />
+                            <span>4.5</span>
+                        </div>
+                    </div>
+                    <p class="courses_card--desc">
+                        Get the best course, gain knowledge and shine for your
+                        future career.
+                    </p>
+                    <div class="courses_card--price">
+                        <p>$120.75</p>
+                        <button class="btn btn-web-design">Book Now</button>
+                    </div>
+                </div>
+                <div class="courses_card-2">
+                    <img
+                        class="courses_card-img"
+                        src="./assets/img/courses2.png"
+                        alt=""
+                    />
+                    <div class="courses_card--title">
+                        <p>UI/UX design</p>
+                        <div class="course_card__review">
+                            <img src="./assets/img/couse-Star 6.png" alt="" />
+                            <span>4.5</span>
+                        </div>
+                    </div>
+                    <p class="courses_card--desc">
+                        Get the best course, gain knowledge and shine for your
+                        future career.
+                    </p>
+                    <div class="courses_card--price">
+                        <p>$120.75</p>
+                        <button class="btn">Book Now</button>
+                    </div>
+                </div>
+                <div class="courses_card-3">
+                    <img
+                        class="courses_card-img"
+                        src="./assets/img/courses3.png"
+                        alt=""
+                    />
+                    <div class="courses_card--title">
+                        <p>Web App design</p>
+                        <div class="course_card__review">
+                            <img src="./assets/img/couse-Star 6.png" alt="" />
+                            <span>4.5</span>
+                        </div>
+                    </div>
+                    <p class="courses_card--desc">
+                        Get the best course, gain knowledge and shine for your
+                        future career.
+                    </p>
+                    <div class="courses_card--price">
+                        <p>$120.75</p>
+                        <button class="courses_card-book-btn btn">
+                            Book Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <!-- .course-card - cho mỗi card khóa học.
+            .course-title - cho tiêu đề khóa học.
+            .course-price - cho giá khóa học.
+            .book-now-button - cho nút đặt khóa học -->
+        </div>
+    </body>
 </html>
