user comment section

--- a/index.html
+++ b/index.html
@@ -294,5 +294,24 @@
             .course-price - cho giá khóa học.
             .book-now-button - cho nút đặt khóa học -->
         </div>
+
+        <!-- User_comment Section -->
+        <div class="user_comment">
+            <div class="user_comment-userinfo">
+                <img src="./assets/img/user-icon2649.png" alt="Peter" />
+                <p class="user_name">Peter Moor</p>
+                <p class="user_desc">Student of Web Design</p>
+                <img src="./assets/img/user-loadmoreicon.png" alt="" />
+            </div>
+            <div class="user_comment--content">
+                <img src="./assets/img/quoto-icon.png" alt="" />
+                <p class="content-text">
+                    Not only does my resume look impressive—filled with the
+                    names and logos of world-class institutions—but these
+                    certificates also bring me closer to my career goals by
+                    validating the skills I've learned."
+                </p>
+            </div>
+        </div>
     </body>
 </html>
