--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="header_hero">
                 <div class="header_hero_img-block">
                     <img
-                        class="header_hero_img"
+                        class="header_hero_img pointer"
                         src="./assets/img/hero-guy-lesson 1.png"
                         alt=""
                     />
@@ -215,14 +215,18 @@
                     </p>
                 </div>
                 <div class="courses_header--next-pages">
-                    <img src="./assets/img/next-page-icons.png" alt="" />
+                    <img
+                        class="pointer"
+                        src="./assets/img/next-page-icons.png"
+                        alt=""
+                    />
                 </div>
             </div>
 
             <div class="courses_card">
                 <div class="courses_card-1">
                     <img
-                        class="courses_card-img"
+                        class="courses_card-img pointer"
                         src="./assets/img/courses1.png"
                         alt=""
                     />
@@ -244,14 +248,18 @@
                 </div>
                 <div class="courses_card-2">
                     <img
-                        class="courses_card-img"
+                        class="courses_card-img pointer"
                         src="./assets/img/courses2.png"
                         alt=""
                     />
                     <div class="courses_card--title">
                         <p>UI/UX design</p>
                         <div class="course_card__review">
-                            <img src="./assets/img/couse-Star 6.png" alt="" />
+                            <img
+                                class="pointer"
+                                src="./assets/img/couse-Star 6.png"
+                                alt=""
+                            />
                             <span>4.5</span>
                         </div>
                     </div>
@@ -266,14 +274,18 @@
                 </div>
                 <div class="courses_card-3">
                     <img
-                        class="courses_card-img"
+                        class="courses_card-img pointer"
                         src="./assets/img/courses3.png"
                         alt=""
                     />
                     <div class="courses_card--title">
                         <p>Web App design</p>
                         <div class="course_card__review">
-                            <img src="./assets/img/couse-Star 6.png" alt="" />
+                            <img
+                                class="pointer"
+                                src="./assets/img/couse-Star 6.png"
+                                alt=""
+                            />
                             <span>4.5</span>
                         </div>
                     </div>
@@ -296,15 +308,23 @@
         </div>
 
         <!-- User_comment Section -->
-        <div class="user_comment">
+        <div class="our_bloguser_comment">
             <div class="user_comment-userinfo">
-                <img src="./assets/img/user-icon2649.png" alt="Peter" />
+                <img
+                    class="pointer"
+                    src="./assets/img/user-icon2649.png"
+                    alt="Peter"
+                />
                 <p class="user_name">Peter Moor</p>
                 <p class="user_desc">Student of Web Design</p>
-                <img src="./assets/img/user-loadmoreicon.png" alt="" />
+                <img
+                    class="pointer"
+                    src="./assets/img/user-loadmoreicon.png"
+                    alt=""
+                />
             </div>
             <div class="user_comment--content">
-                <img src="./assets/img/quoto-icon.png" alt="" />
+                <img class="pointer" src="./assets/img/quoto-icon.png" alt="" />
                 <p class="content-text">
                     Not only does my resume look impressive—filled with the
                     names and logos of world-class institutions—but these
@@ -313,5 +333,122 @@
                 </p>
             </div>
         </div>
+
+        <!-- Testimonials Section -->
+        <div class="testimoniour_blog-card-itemals-container content-size">
+            <div class="testimonial1">
+                <div class="testimonial-author">
+                    <img
+                        class="testimonial-author1 pointer"
+                        src="./assets/img/testimonials1.png"
+                        alt=""
+                    />
+                    <img
+                        class="testimonial-author2 pointer"
+                        src="./assets/img/testimonials2.png"
+                        alt=""
+                    />
+                </div>
+                <div class="testimonial-desc">
+                    <h2>Learner outcomes through our awesome platform</h2>
+                    <p class="testimonial-text">
+                        87% of people learning for professional development
+                        report career benefits like getting a promotion, a
+                        raise, or starting a new career.
+                    </p>
+                    <p class="testimonial-lesson">
+                        Lesson Impact Report (2022)
+                    </p>
+                    <button class="testimonial-btn btn">Sign Up</button>
+                </div>
+            </div>
+
+            <div class="testimonial2">
+                <div class="testimonial2_decs">
+                    <h2>
+                        Take the next step toward your personal and professional
+                        goals with Lesson.
+                    </h2>
+                    <p>
+                        Take the next step toward. Join now to receive
+                        personalized and more recommendations from the full
+                        Coursera catalog.
+                    </p>
+                    <a href="">
+                        <div class="testimonial2_btn btn">Join Now</div>
+                    </a>
+                </div>
+                <div class="testimonial2_author">
+                    <img
+                        class="pointer"
+                        src="./assets/img/testimonials3.png"
+                        alt=""
+                    />
+                </div>
+            </div>
+        </div>
+
+        <!-- Our_blog Section -->
+        <div class="our_blog content-size">
+            <h1>Our blog</h1>
+            <p>
+                Read our regular travel blog and know the latest update of tour
+                and travel
+            </p>
+            <div class="our_blog-card">
+                <div class="our_blog-card-item">
+                    <img
+                        class="pointer"
+                        src="./assets/img/our-blog-card1.png"
+                        alt=""
+                    />
+                    <div class="our_blog--date">
+                        <p>21 November 2021</p>
+                    </div>
+                    <h2 class="our_blog-desc">
+                        How to become a pro web designer in 2022 and get remot
+                        job?
+                    </h2>
+                    <button class="our_blog-btn btn btn-yellow">
+                        Read More
+                    </button>
+                </div>
+                <div class="our_blog-card-item">
+                    <img
+                        class="pointer"
+                        src="./assets/img/our-blog-card2.png"
+                        alt=""
+                    />
+                    <div class="our_blog--date">
+                        <p>21 November 2021</p>
+                    </div>
+                    <h2 class="our_blog-desc">
+                        How to become a pro web designer in 2022 and get remot
+                        job?
+                    </h2>
+                    <button class="our_blog-btn btn">Read More</button>
+                </div>
+                <div class="our_blog-card-item">
+                    <img
+                        class="pointer"
+                        src="./assets/img/our-blog-card3.png"
+                        alt=""
+                    />
+                    <div class="our_blog--date">
+                        <p>21 November 2021</p>
+                    </div>
+                    <h2 class="our_blog-desc">
+                        How to become a pro web designer in 2022 and get remot
+                        job?
+                    </h2>
+                    <button class="our_blog-btn btn">Read More</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <!--  -->
+        </footer>
     </body>
 </html>
