--- a/index.html
+++ b/index.html
@@ -448,7 +448,47 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <!--  -->
+            <div class="footer_container">
+                <div class="footer_policy">
+                    <p class="footer-title">Lesson.</p>
+                    <p class="footer_policy-desc">
+                        Need to help for your dream Career? trust us. With
+                        Lesson, study becomes a lot easier with us.
+                    </p>
+                    <div class="footer_policy-icon">
+                        <img src="./assets/img/Social.png" alt="" />
+                    </div>
+                </div>
+                <div class="footer_company">
+                    <p class="footer-title">Company</p>
+                    <ul class="footer_company-list">
+                        <li>About Us</li>
+                        <li>Features</li>
+                        <li>Our Pricing</li>
+                        <li>Latest News</li>
+                    </ul>
+                </div>
+                <div class="footer_support">
+                    <p class="footer-title">Company</p>
+                    <ul class="footer_support-list">
+                        <li>About Us</li>
+                        <li>Features</li>
+                        <li>Our Pricing</li>
+                        <li>Latest News</li>
+                    </ul>
+                </div>
+                <div class="footer_address">
+                    <p class="footer-title">Company</p>
+                    <ul class="footer_address-list">
+                        <li>
+                            <span>Location:</span> 27 Division St, New York, NY
+                            10002, USA
+                        </li>
+                        <li><span>Email:</span> email@gmail.com</li>
+                        <li><span>Phone:</span> + 000 1234 567 890</li>
+                    </ul>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
