add copyright in footer

--- a/index.html
+++ b/index.html
@@ -489,6 +489,9 @@
                     </ul>
                 </div>
             </div>
+            <div class="footer_copyright">
+                <p>Copyright ©2022 web design. All rights reserved</p>
+            </div>
         </footer>
     </body>
 </html>
