fix bug: our-blog

--- a/index.html
+++ b/index.html
@@ -389,59 +389,61 @@
         </div>
 
         <!-- Our_blog Section -->
-        <div class="our_blog content-size">
-            <h1>Our blog</h1>
-            <p>
-                Read our regular travel blog and know the latest update of tour
-                and travel
-            </p>
-            <div class="our_blog-card">
-                <div class="our_blog-card-item">
-                    <img
-                        class="pointer"
-                        src="./assets/img/our-blog-card1.png"
-                        alt=""
-                    />
-                    <div class="our_blog--date">
-                        <p>21 November 2021</p>
+        <div class="our_blog">
+            <div class="content-size">
+                <h1>Our blog</h1>
+                <p>
+                    Read our regular travel blog and know the latest update of
+                    tour and travel
+                </p>
+                <div class="our_blog-card">
+                    <div class="our_blog-card-item">
+                        <img
+                            class="pointer"
+                            src="./assets/img/our-blog-card1.png"
+                            alt=""
+                        />
+                        <div class="our_blog--date">
+                            <p>21 November 2021</p>
+                        </div>
+                        <h2 class="our_blog-desc">
+                            How to become a pro web designer in 2022 and get
+                            remot job?
+                        </h2>
+                        <button class="our_blog-btn btn btn-yellow">
+                            Read More
+                        </button>
                     </div>
-                    <h2 class="our_blog-desc">
-                        How to become a pro web designer in 2022 and get remot
-                        job?
-                    </h2>
-                    <button class="our_blog-btn btn btn-yellow">
-                        Read More
-                    </button>
-                </div>
-                <div class="our_blog-card-item">
-                    <img
-                        class="pointer"
-                        src="./assets/img/our-blog-card2.png"
-                        alt=""
-                    />
-                    <div class="our_blog--date">
-                        <p>21 November 2021</p>
+                    <div class="our_blog-card-item">
+                        <img
+                            class="pointer"
+                            src="./assets/img/our-blog-card2.png"
+                            alt=""
+                        />
+                        <div class="our_blog--date">
+                            <p>21 November 2021</p>
+                        </div>
+                        <h2 class="our_blog-desc">
+                            How to become a pro web designer in 2022 and get
+                            remot job?
+                        </h2>
+                        <button class="our_blog-btn btn">Read More</button>
                     </div>
-                    <h2 class="our_blog-desc">
-                        How to become a pro web designer in 2022 and get remot
-                        job?
-                    </h2>
-                    <button class="our_blog-btn btn">Read More</button>
-                </div>
-                <div class="our_blog-card-item">
-                    <img
-                        class="pointer"
-                        src="./assets/img/our-blog-card3.png"
-                        alt=""
-                    />
-                    <div class="our_blog--date">
-                        <p>21 November 2021</p>
+                    <div class="our_blog-card-item">
+                        <img
+                            class="pointer"
+                            src="./assets/img/our-blog-card3.png"
+                            alt=""
+                        />
+                        <div class="our_blog--date">
+                            <p>21 November 2021</p>
+                        </div>
+                        <h2 class="our_blog-desc">
+                            How to become a pro web designer in 2022 and get
+                            remot job?
+                        </h2>
+                        <button class="our_blog-btn btn">Read More</button>
                     </div>
-                    <h2 class="our_blog-desc">
-                        How to become a pro web designer in 2022 and get remot
-                        job?
-                    </h2>
-                    <button class="our_blog-btn btn">Read More</button>
                 </div>
             </div>
         </div>
